--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -19,3 +19,5 @@ include slide-in-block/slide-in-block.pug
 include video-block/video-block.pug
 include text-grid-block/text-grid-block.pug
 include center-block/center-block.pug
+include parallax-bump-block/parallax-bump-block.pug
+include wave-object/wave-object.pug
