--- a/src/components/parallax-object/parallax-object.sass
+++ b/src/components/parallax-object/parallax-object.sass
@@ -2,6 +2,7 @@
   position: relative
   transition: transform 200ms ease
   transform: translateZ(0)
+  z-index: 1
 
   &:nth-child(1)
     margin-right: 2rem
