--- a/src/index.sass
+++ b/src/index.sass
@@ -24,3 +24,5 @@
 @import './components/video-block/video-block.sass'
 @import './components/text-grid-block/text-grid-block.sass'
 @import './components/center-block/center-block.sass'
+@import './components/parallax-bump-block/parallax-bump-block.sass'
+@import './components/wave-object/wave-object.sass'
