--- a/src/components/center-block/center-block.sass
+++ b/src/components/center-block/center-block.sass
@@ -44,8 +44,8 @@
           font-weight: normal
           white-space: pre-line
           text-align: center
-          max-width: $max-width
-          padding: 3rem
+          max-width: 80rem
+          padding-bottom: 3rem
           margin: auto
 
         > p
