--- a/src/components/parallax-bump-block/parallax-bump-block.sass
+++ b/src/components/parallax-bump-block/parallax-bump-block.sass
@@ -15,6 +15,9 @@
     position: relative
 
     > .content
+      max-width: 50rem
+      overflow: hidden
+
       > h1
         margin: 10rem 0 2rem
         font-size: 4rem
