--- a/src/cases-antistress.pug
+++ b/src/cases-antistress.pug
@@ -5,8 +5,8 @@ block vars
 
 block content
   +header-hero('Antistress', '-subpage -case -inverted', 'Take a deep breath')
+  +large-image('./images/cases/antistress-1.jpg')
   +center-block('Speak your mind', 'Paykartan.se is a web app that shows all restaurants near you where you can pay with your smartphone. The app includes Swish, Apple Pay and Beam.', '', '', '', '', '', '-antistress-loop')
-
   +parallax-bump-block(
     'Lunch time and… #!?@%!!\nYou forgot your wallet…',
     'Paykartan.se is a web app that shows all restaurants near you where you can pay with your smartphone. The app includes Swish, Apple Pay and Beam.',
@@ -14,11 +14,9 @@ block content
       {image: './images/cases/antistress-phone-3.png', speed: -15, startPos: 53, width: '412px', align: 'right'},
       {image: './images/cases/antistress-phone-2.png', speed: -28, startPos: -30, width: '522px', align: 'right'},
       {image: './images/cases/antistress-phone-1.png', speed: 0, startPos: -115, width: '568px', align: 'right'}
-    ]
+    ],
+    '#fff', '#000'
   )
-
-  +center-block('Att öva medveten andning gör dig bättre rustad när stressen slår till, samtidigt förebygger det stresspåslag.', '', './images/cases/antistress-1.jpg', '', '', '', '#fff')
-
-
+  +center-block('Att öva medveten andning gör dig bättre rustad när stressen slår till, samtidigt förebygger det stresspåslag.', '', './images/cases/antistress-2.jpg', '', '', '', '#fff')
   +projects-block('Antistress')
   +footer-block('grey')
