--- a/src/cases-tennis-watch.pug
+++ b/src/cases-tennis-watch.pug
@@ -11,7 +11,7 @@ block content
     {path: './images/cases/tennis-watch-1.png', width: 427, height: 703, positon: 'inside'},
     'Match trends and\nperformance statistics',
     `Keep track of your progress with statistics and match trend trackning to improve your game. It’s all about winning right?`,
-    '#0C0F16', '#fff', '-tennis-watch')
+    '#0C0F16', '#fff', 'tennis-watch')
   +slide-in-block(
     {path: './images/cases/tennis-watch-2.png', width: 243, height: 438, positon: 'inside'},
     'Tennis score tracker and\nstatistics for Apple Watch',
