--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -4,13 +4,14 @@
   display: flex
   flex-direction: row
 
-  &.-tennis-watch
-    background-image: url('./images/cases/tennis-watch-path-background.svg')
-    background-position-y: calc(50% + 150px)
-    background-repeat: no-repeat
-    width: 100%
-    height: 100%
-    background-size: 101%
+  &.tennis-watch
+    &.-inview
+      background-image: url('./images/cases/tennis-watch-path-background.svg')
+      background-position-y: calc(50% + 150px)
+      background-repeat: no-repeat
+      width: 100%
+      height: 100%
+      background-size: 101%
 
   > .slider
     position: relative
