--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -104,7 +104,7 @@
       > .data
         font-size: 1.6rem
         margin-right: 2.5rem
-
+        
         > .title
           color: $color-red
           text-transform: uppercase
@@ -129,12 +129,12 @@
           text-decoration: none
           font-size: 1.6rem
           font-weight: bold
-          position: fixed
-          right: 3rem
+          position: absolute
+          right: 0
+          bottom: -0.4rem
           white-space: pre
           margin-right: 3.5rem
-          bottom: 2.5rem
-
+          
           &:after
             content: ''
             display: inline-block
@@ -158,7 +158,7 @@
           padding-left: 0
 
       &.-has-case
-        width: calc(100% - 14.5rem)
+        width: 100%
 
         > .action
           width: 0px
