--- a/src/components/header-hero/header-hero.sass
+++ b/src/components/header-hero/header-hero.sass
@@ -1,6 +1,8 @@
 .header-hero
   height: 100%
   margin-bottom: 5rem
+  min-height: 50rem
+  background: inherit
 
   > .inner
     margin: 0 auto
@@ -9,7 +11,6 @@
     flex-direction: column
     padding: 5rem 3rem
     height: 100%
-    min-height: 50rem
 
     > .header
       display: flex
