--- a/src/components/parallax-scroll/parallax-scroll.pug
+++ b/src/components/parallax-scroll/parallax-scroll.pug
@@ -2,5 +2,5 @@ mixin parallax-scroll(type, background)
   .parallax-scroll(class=(type === 'iphoneX') && `-iphoneX`)
     if (type === 'iphoneX')
     img.parallax-frame(src='./images/iphone-x-empty.png')
-    .parallax-content
+    .parallax-content(style=`translateY(-2px)`)
       img.parallax-background(src=background)
