--- a/src/_base.pug
+++ b/src/_base.pug
@@ -13,7 +13,13 @@ head
   meta(property='og:image:width' content='1200')
   meta(property='og:image:height' content='630')
   link(rel='stylesheet' href='/style.css')
-body(class=bodyClass)
+  body(class=bodyClass)
+    script.
+      (function(a,l,b,c,r,s){
+        _nQc=c,r=a.createElement(l),s=a.getElementsByTagName(l)[0];
+        r.async=1;
+        r.src=l.src=("https:"==a.location.protocol?"https://":"http://")+b;
+        s.parentNode.insertBefore(r,s);})
+        (document,"script","serve.albacross.com/track.js","89385932");
   block content
-
   script(src='/script.js' async)
