--- a/src/components/center-block/center-block.sass
+++ b/src/components/center-block/center-block.sass
@@ -69,6 +69,24 @@
         position: relative
         padding: 9.6rem 3rem
 
+    &.-left
+      > img
+        width: 30rem
+        margin-top: 3rem
+
+      > .content > .block
+        padding-left: 310px
+        margin-right: 15%
+
+    &.-right
+      > img
+        width: 30rem
+        margin-top: 3rem
+
+      > .block
+        padding-right: 310px
+        margin-left: 15%
+
     @media screen and (max-width: $small-grid)
       > .content
         flex-direction: column
