Add 'Mat.se' showcase

--- a/src/cases-paykartan.pug
+++ b/src/cases-paykartan.pug
@@ -9,13 +9,13 @@ block content
   +text-block('Lunch time and… #!?@%!!\nYou forgot your wallet…', `Paykartan.se is a web app that shows all restaurants near you where you can pay with your smartphone. The app includes Swish, Apple Pay and Beam.`, ['link', 'Visit the site', 'https://paykartan.se/'])
   +bookmark-block(
     'No worries',
-    'The perfect solution when you forget your wallet or if you simply left it on purpose. The app is super easy to use, just fire it up and follow these steps:',
+    ['The perfect solution when you forget your wallet or if you simply left it on purpose. The app is super easy to use, just fire it up and follow these steps:'],
     [
       {name: 'Find the spot', image: './images/icons/location.svg'},
       {name: 'Eat', image: './images/icons/hamburger.svg'},
       {name: 'Pay (yes, you must do this step)', image: './images/icons/phone.svg'}
       ],
-      ['image', './images/cases/paykartan-2.png'],
+      ['image', './images/cases/paykartan-2.png', 'paykartan'],
       '#FFD2D2', '',
       'left'
       )
