--- a/src/cases-picular.pug
+++ b/src/cases-picular.pug
@@ -8,7 +8,7 @@ block content
   +large-image('./images/cases/picular-1.jpg', 2880, 1276, 'picular')
   +text-block('Search engine for colors', `Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`, ['link', 'Visit the site', 'https://picular.co/'])
   +bookmark-block('Search engine for colors',
-  `Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`,
+  [`Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`],
   [
     {name: 'Correct color tones', image: './images/icons/droplet.svg'},
     {name: 'Grab the HEX color code', image: './images/icons/hash.svg'},
