--- a/src/cases-tennis-watch.pug
+++ b/src/cases-tennis-watch.pug
@@ -10,12 +10,12 @@ block content
   +slide-in-block(
     {path: './images/cases/tennis-watch-1.png', width: 427, height: 703, positon: 'inside'},
     'Match trends and\nperformance statistics',
-    `Keep track of your progress with statistics and match trend trackning to improve your game. It’s all about winning right?`,
+    [`Keep track of your progress with statistics and match trend trackning to improve your game. It’s all about winning right?`],
     '#0C0F16', '#fff', 'tennis-watch')
   +slide-in-block(
     {path: './images/cases/tennis-watch-2.png', width: 243, height: 438, positon: 'inside'},
     'Tennis score tracker and\nstatistics for Apple Watch',
-    `Keeping track of your matches and opponents. Designed for any scoring method.`,
+    [`Keeping track of your matches and opponents. Designed for any scoring method.`],
     '#0C0F16', '#fff', '-right')
   //-+center-block('Available in app store', '', './images/cases/tennis-watch-3.jpg', './images/cases/tennis-watch-logo.svg', {ios: 'https://itunes.apple.com/us/app/tennis-watch-tennis-score/id959541448?mt=8'}, '', '#fff')
   +center-block('Match point.', '', './images/cases/tennis-watch-3.jpg', '', '', '', '#fff')
