--- a/src/components/devices-block/devices-block.sass
+++ b/src/components/devices-block/devices-block.sass
@@ -8,7 +8,7 @@
     align-items: center
     margin: auto
     max-width: $max-width
-    padding: 9.6rem 3rem
+    padding: $global-padding
     font-weight: normal
 
     > img
