--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -21,3 +21,4 @@ include text-grid-block/text-grid-block.pug
 include center-block/center-block.pug
 include parallax-bump-block/parallax-bump-block.pug
 include wave-object/wave-object.pug
+include three-block/three-block.pug
