--- a/src/components/text-block/text-block.sass
+++ b/src/components/text-block/text-block.sass
@@ -6,7 +6,7 @@
     flex-direction: column
     margin: auto
     max-width: $max-width
-    padding: 9.6rem 3rem
+    padding: $global-padding
     font-weight: normal
 
     > .subheading
@@ -19,7 +19,7 @@
       font-size: 2rem
       max-width: 56rem
       line-height: 2.8rem
-      opacity: 0.9
+      opacity: 0.8
 
     > .link
       margin-top: -0.7rem
