--- a/src/index.sass
+++ b/src/index.sass
@@ -26,3 +26,4 @@
 @import './components/center-block/center-block.sass'
 @import './components/parallax-bump-block/parallax-bump-block.sass'
 @import './components/wave-object/wave-object.sass'
+@import './components/three-block/three-block.sass'
