--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -18,13 +18,13 @@ block content
   +slide-in-block(
     './images/cases/retts-plus-2.png',
     'A clear overview',
-    `Giving a doctor or nurse an overview of the patient's visit is a key feature for making the right decision and giving proper care. At the right time.`,
+    [`Giving a doctor or nurse an overview of the patient's visit is a key feature for making the right decision and giving proper care. At the right time.`],
     '#161D2B', '#fff')
   +slide-in-block(
     './images/cases/retts-plus-3.png',
     'Every step on the way',
-    `We developed a timeline that shows the entire patient’s journey from first contact until it was time to go home. This improved the ability to track  events during a patient’s visit better, and enabled nurses and doctors to take make the correct decision at any point.`,
-    '#161D2B', '#fff', '-right')
+    [`We developed a timeline that shows the entire patient’s journey from first contact until it was time to go home. This improved the ability to track  events during a patient’s visit better, and enabled nurses and doctors to take make the correct decision at any point.`],
+    '#161D2B', '#fff', '-right -move-up')
   +parallax-object-block([
       {image: './images/cases/retts-plus-4.png', speed: -20, startPos: 17},
       {image: './images/cases/retts-plus-5.png', speed: 11, startPos: -39}
