--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -1,10 +1,11 @@
 .slide-in-block
   background: #F2F5F6
-  overflow: hidden
   display: flex
   flex-direction: row
+  overflow: hidden
 
   &.tennis-watch
+
     &.-inview
       background-image: url('./images/cases/tennis-watch-path-background.svg')
       background-position-y: calc(50% + 150px)
@@ -14,37 +15,37 @@
       background-size: 101%
 
   > .slider
-    position: relative
-    width: 100%
     margin-left: -15.5rem
     max-width: 90rem
     padding: 8.6rem 0
+    position: relative
+    width: 100%
 
     > img
+      height: auto
       position: relative
       width: 100%
-      height: auto
 
   > .inner
     display: flex
     flex-direction: row
+    font-weight: normal
+    justify-content: space-between
     margin: auto
     max-width: $max-width
-    width: 100%
     padding: 8.6rem 3rem
-    font-weight: normal
     position: relative
-    justify-content: space-between
+    width: 100%
 
     > img
       max-width: 100%
       object-fit: contain
 
     > .content
-      margin-left: 4rem
       display: flex
       flex-direction: column
       justify-content: center
+      margin-left: 4rem
 
       > .subheading
         font-size: 4rem
@@ -53,33 +54,40 @@
 
       > p
         font-size: 2rem
+        line-height: 2.8rem
+        margin-top: 1.6rem
         max-width: 52rem
         min-width: 20rem
-        margin-top: 1.6rem
-        line-height: 2.8rem
-        opacity: 0.9
+        opacity: 0.8
         white-space: pre-line
 
   &.-right
     flex-direction: row-reverse
 
     > .slider
-      margin-right: -15.5rem
-      margin-left: 0
+      margin: 0 -15.5rem 0 0
+
+    > .inner
+      display: flex
+      flex-direction: row-reverse
+      position: relative
+
+      > .content
+        margin-right: 4rem
+        position: relative
+
+  &.-move-up
+
+    > .slider
       padding-top: 0
 
     > .inner
-      position: relative
-      display: flex
-      flex-direction: row-reverse
       padding: 0 3rem 8.6rem
 
-      > .content
-        position: relative
-        margin-right: 4rem
-
   @media screen and (max-width: $medium-grid)
+
     > .inner > img
+      margin: auto
       max-width: 50%
 
   @media screen and (max-width: $small-grid)
@@ -93,19 +101,18 @@
       padding-top: 4rem
 
     > .slider
-      max-width: 100%
       margin: 0
+      max-width: 100%
       padding: 8rem 3rem 0
 
     > .inner
-      padding: 3rem
       flex-direction: column !important
+      padding: 3rem
 
       > img
-        margin-top: 5rem
-        max-width: 70%
         height: auto
-        margin-bottom: 3rem
+        margin: 5rem 0 3rem
+        max-width: 70%
 
       > .content
         margin: 3rem 0 0
