--- a/src/inview.sass
+++ b/src/inview.sass
@@ -1,8 +1,9 @@
 body.-case
-  .text-block > .inner
-    transform: translateY(5rem) translateZ(0)
-
-  .text-block-multiple > .inner
+  .center-block > .inner > .content,
+  .parallax-bump-block > .inner > .content,
+  .text-block > .inner,
+  .text-block-multiple > .inner,
+  .three-block > .inner
     transform: translateY(5rem) translateZ(0)
 
   .bookmark-block .content
@@ -25,23 +26,17 @@ body.-case
   .devices-block > .inner
     transform: translateX(5rem) translateZ(0)
 
-  .center-block > .inner > .content
-    transform: translateY(5rem) translateZ(0)
-
-  .parallax-bump-block > .inner
-    > .content
-      transform: translateY(5rem) translateZ(0)
-
-  .text-block > .inner,
-  .text-block-multiple > .inner,
   .bookmark-block .content,
+  .center-block > .inner > .content,
+  .devices-block > .inner,
+  .parallax-bump-block > .inner > .content,
+  .parallax-bump-block > .inner > .parallaxes,
   .slide-in-block .inner,
   .slide-in-block .slider,
+  .text-block > .inner,
+  .text-block-multiple > .inner,
   .text-grid-block > .blocks > .block,
-  .devices-block > .inner,
-  .center-block > .inner > .content,
-  .parallax-bump-block > .inner > .content,
-  .parallax-bump-block > .inner > .parallaxes
+  .three-block > .inner
     opacity: 0
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
 
@@ -55,16 +50,17 @@ body.-case
     &:nth-child(3)
       transition-delay: 0.3s
 
-  .text-block.-inview > .inner,
-  .text-block-multiple.-inview > .inner,
   .bookmark-block .content.-inview,
+  .center-block.-inview > .inner > .content,
   .devices-block.-inview > .inner,
+  .grid-block.-more-projects.-inview .item,
+  .parallax-bump-block.-inview > .inner > .content,
+  .parallax-bump-block.-inview > .inner > .parallaxes,
   .slide-in-block.-inview > .inner,
   .slide-in-block.-inview > .slider,
+  .text-block-multiple.-inview > .inner,
+  .text-block.-inview > .inner,
   .text-grid-block.-inview > .blocks > .block,
-  .grid-block.-more-projects.-inview .item,
-  .center-block.-inview > .inner > .content,
-  .parallax-bump-block.-inview > .inner > .content,
-  .parallax-bump-block.-inview > .inner > .parallaxes
+  .three-block.-inview > .inner
     transform: none
     opacity: 1
