--- a/src/settings.sass
+++ b/src/settings.sass
@@ -3,6 +3,8 @@ $color-dark-blue: #151b28
 $color-darker-blue: #131824
 
 $max-width: 120rem
+$global-padding: 9.6rem 3rem
+
 $mobile: 415px
 $small-grid: 700px
 $medium-grid: 1040px
