Various design fixes on 'mat.se' showcase

--- a/src/components/bookmark-block/bookmark-block.sass
+++ b/src/components/bookmark-block/bookmark-block.sass
@@ -89,11 +89,12 @@
       margin-bottom: -35rem
       margin-right: -11rem
       @media screen and (max-width: 720px)
-        width: 56%
-        margin: 0 auto -5rem
+        width: 80%
+        margin: 0 auto
+        margin-bottom: -40%
 
 
-    @media screen and (max-width: 700px)
+    @media screen and (max-width: 720px)
       flex-direction: column
 
       &.-right
