--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -71,6 +71,7 @@
       display: flex
       flex-direction: row-reverse
       position: relative
+      padding-bottom: 10rem
 
       > .content
         margin-right: 4rem
@@ -111,7 +112,7 @@
 
       > img
         height: auto
-        margin: 5rem 0 3rem
+        margin: 5rem auto 3rem
         max-width: 70%
 
       > .content
