--- a/src/components/three-block/three-block.sass
+++ b/src/components/three-block/three-block.sass
@@ -81,8 +81,11 @@
             text-align: center
 
           > ul
-            list-style: none
-            text-decoration: underline
+            padding-top: 4rem
+            text-align: left
+            width: 20rem
+            margin: auto
+
 
           &:nth-child(1)
             padding-left: 0
