Fix margin on cases page

--- a/src/components/header-hero/header-hero.sass
+++ b/src/components/header-hero/header-hero.sass
@@ -1,8 +1,10 @@
 .header-hero
   height: 100%
   margin-bottom: 5rem
-  min-height: 50rem
   background: inherit
+
+  &.-frontpage
+    min-height: 50rem
 
   > .inner
     margin: 0 auto
