--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends _base.pug
 
 block content
-  +header-hero
+  +header-hero('', '-frontpage')
   +case-block(data.frontCases, 'preview')
   +team-block
   +footer-block
