Change order of 'View all cases' on frontpage

--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -12,6 +12,12 @@
         width: auto
         grid-row: span 16
 
+        &:nth-child(6)
+          order: 5
+
+        &:nth-child(5)
+          order: 6
+
       @media screen and (min-width: 1041px)
         > .item
           &:nth-child(1)
