--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -1,13 +1,15 @@
 mixin case-card(name, image, desc, client, type, actions, isPreview)
   article.grid-card
-    .card
+
+    #{actions && actions[0].showcase ? 'a' : 'div'}.card(href=actions && actions[0].showcase && `/cases/${actions[0].showcase}.html`)
+
       .shine
 
       img(src=image alt=name)
 
       if actions && actions[0].showcase
         h3.name(class=`-showcase${isPreview ? ' -large' : ''}`)= name
-          a.right-arrow(class='mobile-case-link -block', href=`/cases/${actions[0].showcase}.html`)
+          .right-arrow(class='mobile-case-link -block', href=`/cases/${actions[0].showcase}.html`)
         .info
           p.description(class='-mobile-desc')= desc
 
@@ -27,17 +29,18 @@ mixin case-card(name, image, desc, client, type, actions, isPreview)
             h4.title Client
             p.value= client
 
-        if actions && actions.length > 0
-          .action(class=isPreview ? '' : '-block' )
-            each action in actions
-              if action.type === 'ios'
-                a.link(href=action.url): img(src='./images/ios.svg' width='37' height='37' alt='Download on iOS' title='Download on iOS')
-              else if action.type === 'android'
-                a.link(href=action.url): img(src='./images/android.svg' width='37' height='37' alt='Download on Android' title='Download on Android')
-              else if action.type === 'video'
-                a.link(href=action.url): img(src='./images/play.svg' width='37' height='37' alt='Play Video' title='Play Video')
-              else if action.type === 'link'
-                a.link(href=action.url): img(src='./images/link.svg' width='37' height='37' alt='Visit link' title='Visit link')
+        if actions && actions[0].showcase
+          .view-case(href=`/cases/${actions[0].showcase}.html`) View Case
 
-              if action.showcase
-                a.view-case(href=`/cases/${action.showcase}.html`) View Case
+        else
+          if actions && actions.length > 0
+            .action(class=isPreview ? '' : '-block' )
+              each action in actions
+                if action.type === 'ios'
+                  a.link(href=action.url): img(src='./images/ios.svg' width='37' height='37' alt='Download on iOS' title='Download on iOS')
+                else if action.type === 'android'
+                  a.link(href=action.url): img(src='./images/android.svg' width='37' height='37' alt='Download on Android' title='Download on Android')
+                else if action.type === 'video'
+                  a.link(href=action.url): img(src='./images/play.svg' width='37' height='37' alt='Play Video' title='Play Video')
+                else if action.type === 'link'
+                  a.link(href=action.url): img(src='./images/link.svg' width='37' height='37' alt='Visit link' title='Visit link')
