--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -2,6 +2,9 @@
   color: white
   position: relative
 
+  a:hover
+    opacity: 1
+
   &:before
     content: ''
     position: absolute
@@ -20,6 +23,8 @@
     width: 100%
     height: 100%
     overflow: hidden
+    text-decoration: none
+    color: #fff
 
     > .shine
       content: ''
@@ -101,6 +106,32 @@
       flex-wrap: wrap
       width: 100%
 
+      > .view-case
+        padding: 0.9rem 2rem 0.4rem
+        color: #fff
+        text-decoration: none
+        font-size: 1.6rem
+        font-weight: bold
+        position: absolute
+        right: 0
+        bottom: -0.3rem
+        white-space: pre
+        margin-right: 2.5rem
+
+        &:after
+          content: ''
+          display: inline-block
+          position: absolute
+          background: url('./images/arrow-red-small.svg') no-repeat 0 0/100%
+          width: 4.2rem
+          height: 2.3rem
+          margin-left: 1rem
+          transition: all 0.2s ease
+          top: 0.8rem
+
+        &:hover::after
+          margin-left: 1.8rem
+
       > .data
         font-size: 1.6rem
         margin-right: 2.5rem
@@ -118,37 +149,12 @@
         border-left: 1px solid rgba(white, 0.3)
         padding-left: 2.5rem
         display: flex
+        align-items: center
 
         > .link
           margin-right: 2rem
           display: inline-block
           height: 3.7rem
-
-        > .view-case
-          padding: 0.9rem 2rem 0.4rem
-          color: #fff
-          text-decoration: none
-          font-size: 1.6rem
-          font-weight: bold
-          position: absolute
-          right: 0
-          bottom: -0.3rem
-          white-space: pre
-          margin-right: 2.5rem
-
-          &:after
-            content: ''
-            display: inline-block
-            position: absolute
-            background: url('./images/arrow-red-small.svg') no-repeat 0 0/100%
-            width: 4.2rem
-            height: 2.3rem
-            margin-left: 1rem
-            transition: all 0.2s ease
-            top: 0.8rem
-
-          &:hover::after
-            margin-left: 1.8rem
 
         &.-block
           width: 100%
@@ -162,11 +168,6 @@
         width: 100%
         flex-direction: column
 
-        > .action
-          width: 0px
-          padding: 0
-          margin: 0
-
     @media screen and (max-width: $medium-grid + 100px)
       > .meta
 
@@ -174,13 +175,11 @@
           font-size: 1.5rem
           margin-right: 1.5rem
 
-        > .action
-
-          > .view-case
-            font-size: 1.5rem
-            margin-right: 2rem
-            &:after
-              width: 4rem
+        > .view-case
+          font-size: 1.5rem
+          margin-right: 2rem
+          &:after
+            width: 4rem
 
     @media screen and (max-width: $medium-grid)
       > .meta
@@ -189,13 +188,9 @@
           width: 100%
           border-left: 0
           border-top: 1px solid rgba(white, 0.3)
+          padding-top: 2rem
+          margin-top: 2rem
           padding-left: 0
-
-        &.-has-case
-          width: 100%
-
-          > .action
-            width: 0
 
       > .name
         &.-large
@@ -293,3 +288,12 @@
 
       > .info
         opacity: 1
+
+.touchevents
+  .grid-card
+    > .card
+      > .name
+        margin-bottom: 0
+      > .info
+        > .-mobile-desc
+          display: none
