Change images on mat-se case

--- a/src/cases-mat-se.pug
+++ b/src/cases-mat-se.pug
@@ -14,13 +14,13 @@ block content
   )
 
   +slide-in-block(
-    {path: './images/cases/mat-se-5.png', width: 410, height: 410, positon: 'inside'},
+    {path: './images/cases/mat-se-5.svg', width: 824, height: 262, positon: 'inside'},
     'Fast-Moving Consumer Goods',
     [
       'Mat.se has developed its own logistics and supply chain platform which perfectly adapts to their operations and covers all aspects of their supply chain. The platform supports and tracks everything from purchasing to warehousing to distribution.',
       'We at Future Memories teamed up with Mat.se to improve and extend their technical platform. The Mat.se backbone is based on Java technologies and leverages message-driven processing for high throughput.'
     ],
-    '', '', '-right'
+    '', '', '-right -flex-end'
   )
 
   +three-block(
