--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -77,6 +77,10 @@
         margin-right: 4rem
         position: relative
 
+  &.-flex-end
+    > .inner > img
+        margin-top: auto
+
   &.-move-up
 
     > .slider
