--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -23,6 +23,8 @@
 
       > svg
         width: 4rem
+        position: relative
+        z-index: 1
 
     > .navMenu
       background: none
@@ -80,11 +82,18 @@
         > li
           font-size: 3rem
           font-weight: bold
-          margin: .8em 0
+          margin: 2rem 0
           opacity: 0
           pointer-events: auto
           transform: translateX(-8rem)
-          transition: transform .2s ease, opacity .2s ease
+          transition: all .2s ease
+
+          @media screen and (max-height: 500px)
+            margin: 1.5rem 0
+
+          @media screen and (max-height: 400px)
+            margin: 1rem 0
+            font-size: 2rem
 
           @for $i from 1 through 4
             &:nth-child(#{$i})
