--- a/src/components/footer.sass
+++ b/src/components/footer.sass
@@ -51,6 +51,9 @@
         font-weight: lighter
         line-height: 2.5rem
 
+        > a
+          color: inherit
+
         *:nth-child(4), *:nth-child(6)
           margin-top: 3rem
 
