--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -1,7 +1,7 @@
 .projects
   display: grid
   grid-gap: 2rem
-  grid-template-columns: repeat(2, 1fr)
+  grid-template-columns: repeat(6, 1fr)
   margin-top: 5rem
   position: relative
 
@@ -13,11 +13,17 @@
     overflow: hidden
     padding: 4rem 4rem 0
     position: relative
+    grid-column: span 3
+    width: 100%
+
+    &.button
+      padding: 0
 
     > .details
       margin-right: 2rem
       min-width: 25rem
       position: relative
+      z-index: 2
 
       > .arrow
         bottom: 2rem
@@ -26,7 +32,6 @@
 
       > h3
         font-size: 2rem
-        max-width: 20rem
 
       > .desc
         font-size: 2rem
@@ -39,21 +44,45 @@
 
     > img
       position: relative
+      z-index: 1
 
-    &.small
-      height: 4rem
+      &.background
+        position: absolute
+        top: 0
+        left: 0
+        object-fit: cover
+        z-index: 0
 
-    &.medium
-      height: 34rem
+        &.height
+          height: 100%
+          min-width: 100%
+
+        &.width
+          height: 100%
+          min-width: 100%
 
     &:first-child
-      grid-column: span 2
+      grid-column: span 6
       height: 40rem
+
+    &:nth-child(4), &:nth-child(5), &:nth-child(6),
+    &:nth-child(9), &:nth-child(10), &:nth-child(11),
+    &:nth-child(14), &:nth-child(15), &:nth-child(16),
+      grid-column: span 2
+
+  @media screen and (max-width: 1000px)
+    > .project
+      &:nth-child(4), &:nth-child(5), &:nth-child(6),
+      &:nth-child(9), &:nth-child(10), &:nth-child(11),
+      &:nth-child(14), &:nth-child(15), &:nth-child(16),
+        grid-column: span 3
 
   @media screen and (max-width: 800px)
     display: block
     left: -3rem
     width: 100vw
 
-    > .project > .details
-      margin-right: 0
+    > .project
+
+      > .details
+        margin-right: 1rem
