--- a/src/index.sass
+++ b/src/index.sass
@@ -15,6 +15,8 @@ html
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   background: $color-darker-blue
+
+html, button
   font-family: 'Space Grotesk'
 
 a
