Add 'Team' page

--- a/src/components/moon.sass
+++ b/src/components/moon.sass
@@ -17,7 +17,7 @@
     transform: translate(-50%) translateY(-50%)
 
     &.animate
-      animation: float 6s ease-in-out infinite
+      animation: float 5s ease-in-out infinite
 
     &:after
       content: ''
@@ -63,6 +63,9 @@
 
   &.medium
     transform: scale(1.56)
+
+  &.big
+    transform: scale(2.7)
 
   // Moon colors
   &.blue
@@ -116,7 +119,7 @@
       margin-left: 0
 
     50%
-      margin-top: 20px
+      margin-top: 15px
       margin-left: 5px
     100%
       margin-top: 0
