--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -11,7 +11,7 @@
     z-index: 1
     display: flex
     align-items: flex-end
-    transition: opacity 0.2s ease
+    transition: all 0.2s ease
 
     > .shine
       content: ''
