--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -29,6 +29,7 @@
       padding: 3rem
       overflow: hidden
       margin-bottom: -1rem
+      transition: all 0.2s ease-in-out
 
       > h3
         font-size: 4rem
@@ -38,7 +39,7 @@
       > .desc
         font-size: 1.5rem
         line-height: 0rem
-        transition: opacity 0.2s ease-in-out
+        transition: opacity 0.3s ease-in-out
         opacity: 0
 
         > p
