--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -31,6 +31,12 @@
     > svg
       margin-top: 2rem
 
+  &.small
+    padding: 1.5rem 2.5rem
+
+    > span
+      margin: 2rem
+
   &:hover
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.28)
 
