Add 'Picular' showcase

--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -71,6 +71,12 @@
     &:nth-child(14), &:nth-child(15), &:nth-child(16),
       grid-column: span 2
 
+  &.browseCase
+    > .project
+       &:nth-child(1), &:nth-child(2), &:nth-child(3)
+        grid-column: span 2
+        height: 34rem
+
   @media screen and (max-width: 1000px)
     > .project
       &:nth-child(4), &:nth-child(5), &:nth-child(6),
