--- a/src/settings.sass
+++ b/src/settings.sass
@@ -4,3 +4,7 @@ $color-darker-blue: #070B13
 
 $max-width: 120rem
 $global-padding: 9.6rem 3rem
+
+$mobile: 415px
+$small-grid: 700px
+$medium-grid: 1040px
