--- a/src/components/card.sass
+++ b/src/components/card.sass
@@ -1,11 +1,16 @@
-.shine
-  content: ''
-  z-index: 3
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  opacity: 1
-  pointer-events: none
-  transition: opacity .2s ease
+.card
+
+  &:hover
+    opacity: 1
+
+  >.shine
+    content: ''
+    z-index: 3
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    opacity: 1
+    pointer-events: none
+    transition: opacity .2s ease
