--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -5,7 +5,7 @@
   display: flex
   height: 14rem
   justify-content: center
-  position: relative
+  position: absolute
   width: 100%
   z-index: 2
 
@@ -138,6 +138,8 @@
             transform: none
 
   &.dark
+    background: white
+
     > .inner
       color: black
 
