--- a/src/routes/404.sass
+++ b/src/routes/404.sass
@@ -4,9 +4,10 @@
   align-items: center
   display: flex
   justify-content: center
-  min-height: calc(100vh - 14rem)
+  min-height: 100vh
   overflow: hidden
   position: relative
+  padding-top: 14rem
 
   > .notFound
     align-items: center
