Add 'Tennis Watch' case

--- a/src/cases/components/slide-in-block.sass
+++ b/src/cases/components/slide-in-block.sass
@@ -54,7 +54,7 @@
         white-space: pre-line
 
   &.tennisWatch
-    &.-inview
+    &.inView
       background-image: url('../../images/cases/tennis-watch-path-background.svg')
       background-position-y: calc(50% + 150px)
       background-repeat: no-repeat
