--- a/src/cases/components/large-image.sass
+++ b/src/cases/components/large-image.sass
@@ -1,6 +1,22 @@
+@import '../../settings.sass'
+
 .largeImage
   position: relative
   overflow: hidden
+
+  > .videoBlock
+      height: auto
+      overflow: hidden
+      margin-bottom: -3px
+      max-width: $max-width
+      width: 100%
+      margin: auto
+
+      > video
+        height: auto
+        max-width: $max-width
+        width: 100%
+        margin: auto
 
   > img
     display: block
